test stop and resume done